--- a/dist.ini
+++ b/dist.ini
@@ -11,4 +11,10 @@ version = 0.1.0
 
 [CriticTests]
 [PodTests]
-
+[HasVersionTests]
+[PortabilityTests]
+[SynopsisTests]
+[ReportVersions]
+[UnusedVarsTests]
+[CompileTests]
+skip = Test$
