Added some more plugins

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,9 @@ version = 0.1.0
 
 [PkgVersion]
 [PodWeaver]
+[InstallGuide]
+[ReadmeFromPod]
+[ReadmeMarkdownFromPod]
 
 [CriticTests]
 [PodTests]
@@ -19,4 +22,5 @@ version = 0.1.0
 [CompileTests]
 skip = Test$
 
+[MinimumPerl]
 [AutoPrereq]
