Switch to @RCT plugin

--- a/dist.ini
+++ b/dist.ini
@@ -3,24 +3,6 @@ author = Ryan C. Thompson <rct@thompsonclan.org>
 license = Perl_5
 copyright_holder = Ryan C. Thompson
 
-version = 0.1.0
-[@Basic]
+version = 0.1.1
 
-[PkgVersion]
-[PodWeaver]
-[InstallGuide]
-[ReadmeFromPod]
-[ReadmeMarkdownFromPod]
-
-[CriticTests]
-[PodTests]
-[HasVersionTests]
-[PortabilityTests]
-[SynopsisTests]
-[ReportVersions]
-[UnusedVarsTests]
-[CompileTests]
-skip = Test$
-
-[MinimumPerl]
-[AutoPrereq]
+[@RCT]
