Switched to AutoVersion

--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,7 @@ author = Ryan C. Thompson <rct@thompsonclan.org>
 license = Perl_5
 copyright_holder = Ryan C. Thompson
 
-version = 0.1.1
+[AutoVersion]
+major = 0
 
 [@RCT]
