--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,6 @@ author = Ryan C. Thompson <rct@thompsonclan.org>
 license = Perl_5
 copyright_holder = Ryan C. Thompson
 
-[@RTHOMPSON]
+[@Author::RTHOMPSON]
 
 ; authordep Pod::Weaver::PluginBundle::Author::RTHOMPSON
